--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "28-Stu_Mini-Project",
+  "name": "18-Challenge",
   "version": "1.0.1",
-  "description": "Mongoose back-end project - Develop",
+  "description": "Social Network API - Develop",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
