--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "18-Challenge",
+  "name": "18-challenge",
   "version": "1.0.1",
   "description": "Social Network API - Develop",
   "main": "index.js",
